# TextCleaner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py
textcleaner/: __main__.py  app.py  textprocess.py
